[gd_scene load_steps=9 format=3 uid="uid://cgp3hadmn1wax"]

[ext_resource type="Texture2D" uid="uid://ffa0bm0bfihm" path="res://assets/textures/immobile_plume.png" id="1_bffqa"]
[ext_resource type="Script" path="res://entities/immobile_plume.gd" id="1_khutq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qutbk"]
atlas = ExtResource("1_bffqa")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjm4m"]
atlas = ExtResource("1_bffqa")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q16hc"]
atlas = ExtResource("1_bffqa")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_meybq"]
atlas = ExtResource("1_bffqa")
region = Rect2(192, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_tkby0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qutbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjm4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q16hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meybq")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfq3h"]
size = Vector2(64, 128)

[node name="immobile_plume" type="Area2D"]
script = ExtResource("1_khutq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(32, -64)
sprite_frames = SubResource("SpriteFrames_tkby0")
frame_progress = 0.935066

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, -64)
shape = SubResource("RectangleShape2D_gfq3h")

[node name="TIME_START" type="Timer" parent="."]
one_shot = true

[node name="COOL_DOWN_TIME" type="Timer" parent="."]
one_shot = true

[node name="CHARGE_TIME" type="Timer" parent="."]
one_shot = true

[node name="ACTIVE_TIME" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="TIME_START" to="." method="_on_time_start_timeout"]
[connection signal="timeout" from="COOL_DOWN_TIME" to="." method="_on_cool_down_time_timeout"]
[connection signal="timeout" from="CHARGE_TIME" to="." method="_on_charge_time_timeout"]
[connection signal="timeout" from="ACTIVE_TIME" to="." method="_on_active_time_timeout"]
